# project-magi

./: .gitignore  .pre-commit-config.yaml  AUDIT.md  CLAUDE.md  LICENSE  README.md  justfile  pyproject.toml
.claude/agents/: balthasar.md  casper.md  magi-builder.md  magi.md  melchior.md
.github/workflows/: ci.yml
docs/: PRD.md  capstone.md  epics.md  next-steps.md  philosophy.md  user-guide.md
src/project_magi/: __init__.py  cli.py  session.py
src/project_magi/agents/: __init__.py  critique.py  output.py  runner.py
src/project_magi/coordinator/: __init__.py  checkpoint.py  complexity_gate.py  loop.py
src/project_magi/personas/: __init__.py  builder.py  model.py  parser.py
src/project_magi/providers/: __init__.py  base.py  claude.py
src/project_magi/tools/: __init__.py  (+1 more)
tests/: conftest.py  test_agents_integration.py  test_agents_output.py  test_agents_runner.py  test_capstone.py  test_checkpoint.py  test_cli.py  test_complexity_gate.py  test_critique.py  test_critique_integration.py  test_deliberation_integration.py  test_deliberation_loop.py  test_init.py  test_persona_builder.py  test_persona_builder_integration.py  test_personas.py  test_prompt_hardening.py  test_provider_base.py  test_provider_claude.py  test_provider_integration.py  test_reporting.py  test_session.py  test_session_integration.py  test_tools_executor.py
tests/fixtures/: capstone_pressured_report.md  capstone_report.md  claude_simple_response.json  critique_output.json  deliberation_1round.json  persona_output_balthasar.json  persona_output_casper.json  persona_output_melchior.json
(+2 files in other folders)
